--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
+/* ! Google Fonts - Quicksand */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* ! CSS Style Reset */
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  padding: 0;
+}
+
+body {
+  font-family: 'Quicksand' ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  background-color: #fdfffc;
+  color: #050505;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+
+  /* Colors Based off logo */
+  --dark-red: #840000;
+  --dark-orange: #ff0000;
+  --light-orange: #ff8442;
+  --yellow: #ffff00;
+
+  --light-text-color: #fdfffc;
+  --dark-text-color: #050505;
+
+  --btn-radius: 24px;
+  --border-radius: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: #050505;
+}
+
+ul {
+  list-style-type: none;
+}
+
+button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+.btn {
+  padding: 12px 32px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background: transparent;
+  color: var(--dark-text-color);
+  border-radius: var(--btn-radius);
+  cursor: pointer;
+  font-family: var(--font-title);
+  letter-spacing: 2px;
+  transition: 0.5s ease;
 }
